# ogbench

./: .gitignore  CMD_FIXES.md  FRAME_STACKING_README.md  VALIDATION_FIXES.md  environment.yml  fix_imports.sh  frame_stack_example.py  move_agents.sh  pyproject.toml  test_frame_config.py  trajectory_boundary_detection_example.py  visualize_dataset.py
agents/: __init__.py  cmd.py  crl.py  gciql.py  gcivl.py  hiql.py  qrl.py  sac.py
data_gen_scripts/: generate_antsoccer.py
exp/OGBench/CARLA-CRL-Offline/sd000_20250505_214823/: flags.json
exp/OGBench/CARLA-CRL-Offline/sd000_20250505_235503/: flags.json
exp/OGBench/CARLA-CRL-Offline/sd000_20250505_235833/: flags.json
exp/OGBench/CARLA-CRL-Offline/sd000_20250506_000012/: flags.json
exp/OGBench/CARLA-CRL-Offline/sd000_20250506_000931/: flags.json
exp/OGBench/CARLA-CRL-Offline/sd000_20250506_002046/: flags.json
exp/OGBench/CARLA-CRL-Offline/sd000_20250506_002725/: flags.json
exp/OGBench/CARLA-CRL-Offline/sd000_20250506_003027/: flags.json
impls/: DOUBLE_NORMALIZATION_BUG.md  README_upweighting.md  TRAINING_ISSUES_AND_FIXES.md  __init__.py  carla_client.py  client.py  convert_npz.py  eval_carla.py  eval_server.py  explore_dataset.py  explore_hdf5_simple.py  inspect_flax_model.py  main.py  requirements.txt  server.py  test_goal_conditioning.py  train.py  train2.py  train_carla.py  train_nuplan.py  train_offline_carla.py  visualize_carla_dataset.py
impls/agents/: __init__.py  bc.py  clearn.py  cmd.py  crl.py  gcbc.py  gciql.py  tmd.py
impls/examples/: nuplan_video_renderer.py  nuplan_workflow.py
impls/utils/: __init__.py  datasets.py  flax_utils.py  networks.py
ogbench/CarlaEnv/: carla_env.py  global_route_planner.py
ogbench/carla/: __init__.py  carla_env.py
ogbench/nuplan/: README.md  __init__.py  config.py  dataset.py  env.py  loader.py  process_data.py
(+26 files in other folders)
