[project]
name = "ogbench"
version = "0.0.0"
requires-python = ">= 3.10"
dependencies = [
    "chex==0.1.87",
    "distrax==0.1.5",
    "dm-control==1.0.27",
    "flax==0.9.0",
    "gym==0.24.1",
    "gymnasium==1.0.0",
    "lockfile==0.12.2",
    "matplotlib==3.9.2",
    "ml-collections==0.1.1",
    "moviepy==1.0.3",
    "optax==0.2.2",
    "shapely==2.0.6",
    "shimmy[gym-v21,gym-v26]>=0.2.1",
    "wandb>=0.19.11",
    "jax==0.4.28",
    "jaxlib==0.4.28+cuda12.cudnn89",
    "nvidia-cudnn-cu11>=8.9,<9.0",
    "nvidia-cuda-cupti-cu12==12.9.19",
    "nvidia-cusolver-cu12==11.7.4.40",
    "jax-cuda12-pjrt==0.4.28",
    "jax-cuda12-plugin==0.4.28",
    "nvidia-cublas-cu12==12.9.0.13",
    "nvidia-cusparse-cu12==12.5.9.5",
    "nvidia-nvjitlink-cu12==12.9.41",
]

[build-system]
requires = [ "setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
py-modules = [ "main" ]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.pixi.project]
channels = ["conda-forge", "nvidia"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ogbench = { path = ".", editable = true }

[tool.uv]
find-links = [ "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html" ]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[tool.pixi.pypi-options]
no-build-isolation = ["flash-attn"]
find-links = [{ url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html" }]
index-url = "https://pypi.org/simple/"

[tool.pixi.dependencies]
python = "3.11.*"
numpy = "<2"
cuda-nvcc = "*"

[tool.pixi.target.linux-64.pypi-dependencies]
jax = { version = "*", extras = ["cuda12"] }

[tool.pixi.system-requirements]
cuda = "12.0"

